# [package]
# name = "sum-storage"
# version = "3.0.0"
# edition = "2018"
# authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
# repository = "https://github.com/substrate-developer-hub/recipes"
# description = "A pallet with two storage items whose sum is exposed via a custom runtime API"
# license = "GPL-3.0-or-later"

# [package.metadata.docs.rs]
# targets = ['x86_64-unknown-linux-gnu']

# [dependencies]
# parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }

# # Substrate packages
# frame-support = { version = '3.0', default-features = false}
# frame-system = { version = '3.0', default-features = false}
# sp-runtime = { version = '3.0', default-features = false}
# sp-std = { version = '3.0', default-features = false}

# [dev-dependencies]
# serde = '1.0'
# sp-core = '3.0'
# sp-io = '3.0'

# [features]
# default = ["std"]
# std = [
# 	"parity-scale-codec/std",
# 	"sp-std/std",
# 	"sp-runtime/std",
# 	"frame-support/std",
# 	"frame-system/std",
# ]

[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'sum-storage'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
sp-std = { default-features = false, version = '3.0.0' }
# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
serde = '1.0.119'
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']

